--- a/modules/openapi-generator/src/main/resources/csharp-netcore-functions/libraries/httpclient/ApiClient.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-netcore-functions/libraries/httpclient/ApiClient.mustache
@@ -531,6 +531,14 @@ namespace {{packageName}}.Client
 
                 return await ToApiResponse<T>(response, responseData, req.RequestUri);
             }
+            catch(OperationCanceledException)
+            {
+                if(timeoutTokenSource != null && timeoutTokenSource.IsCancellationRequested)
+                {
+                    throw new TimeoutException($"[{req.Method}] {req.RequestUri} is timeout.");
+                }
+                throw;
+            }
             finally
             {
                 if (timeoutTokenSource != null)
