--- a/modules/openapi-generator/src/main/resources/python-nextgen/asyncio/rest.mustache
+++ b/modules/openapi-generator/src/main/resources/python-nextgen/asyncio/rest.mustache
@@ -99,6 +99,9 @@ class RESTClientObject(object):
 
         post_params = post_params or {}
         headers = headers or {}
+        # url already contains the URL query string
+        # so reset query_params to empty dict
+        query_params = {}
         timeout = _request_timeout or 5 * 60
 
         if 'Content-Type' not in headers:
