--- a/modules/openapi-generator/src/main/resources/Java/libraries/apache-httpclient/api.mustache
+++ b/modules/openapi-generator/src/main/resources/Java/libraries/apache-httpclient/api.mustache
@@ -63,7 +63,7 @@ public class {{classname}} {
   {{#isDeprecated}}
   @Deprecated
   {{/isDeprecated}}
-  public {{#returnType}}{{{returnType}}} {{/returnType}}{{^returnType}}void {{/returnType}}{{operationId}}({{#allParams}}{{{dataType}}} {{paramName}}{{^-last}}, {{/-last}}{{/allParams}}) throws ApiException {
+  public {{#returnType}}{{#customResponseWrapper}}{{{.}}}<{{/customResponseWrapper}}{{{returnType}}}{{#customResponseWrapper}}>{{/customResponseWrapper}} {{/returnType}}{{^returnType}}void {{/returnType}}{{operationId}}({{#allParams}}{{{dataType}}} {{paramName}}{{^-last}}, {{/-last}}{{/allParams}}) throws ApiException {
     Object localVarPostBody = {{#bodyParam}}{{paramName}}{{/bodyParam}}{{^bodyParam}}null{{/bodyParam}};
     {{#allParams}}{{#required}}
     // verify the required parameter '{{paramName}}' is set
@@ -111,7 +111,7 @@ public class {{classname}} {
     String[] localVarAuthNames = new String[] { {{#authMethods}}"{{name}}"{{^-last}}, {{/-last}}{{/authMethods}} };
 
     {{#returnType}}
-    TypeReference<{{{returnType}}}> localVarReturnType = new TypeReference<{{{returnType}}}>() {};
+    TypeReference<{{#customResponseWrapper}}{{{.}}}<{{/customResponseWrapper}}{{{returnType}}}{{#customResponseWrapper}}>{{/customResponseWrapper}}> localVarReturnType = new TypeReference<{{#customResponseWrapper}}{{{.}}}<{{/customResponseWrapper}}{{{returnType}}}{{#customResponseWrapper}}>{{/customResponseWrapper}}>() {};
     return apiClient.invokeAPI(
     {{/returnType}}
     {{^returnType}}
