--- a/modules/openapi-generator/src/main/resources/Java/libraries/apache-httpclient/api_test.mustache
+++ b/modules/openapi-generator/src/main/resources/Java/libraries/apache-httpclient/api_test.mustache
@@ -45,7 +45,7 @@ public class {{classname}}Test {
         {{#allParams}}
         {{{dataType}}} {{paramName}} = null;
         {{/allParams}}
-        {{#returnType}}{{{returnType}}} response = {{/returnType}}api.{{operationId}}({{#allParams}}{{paramName}}{{^-last}}, {{/-last}}{{/allParams}});
+        {{#returnType}}{{#customResponseWrapper}}{{{.}}}<{{/customResponseWrapper}}{{{returnType}}}{{#customResponseWrapper}}>{{/customResponseWrapper}} response = {{/returnType}}api.{{operationId}}({{#allParams}}{{paramName}}{{^-last}}, {{/-last}}{{/allParams}});
 
         // TODO: test validations
     }
