--- a/modules/openapi-generator/src/main/resources/Java/libraries/feign/api_test.mustache
+++ b/modules/openapi-generator/src/main/resources/Java/libraries/feign/api_test.mustache
@@ -38,7 +38,7 @@ class {{classname}}Test {
         {{#allParams}}
         {{{dataType}}} {{paramName}} = null;
         {{/allParams}}
-        // {{#returnType}}{{{.}}} response = {{/returnType}}api.{{operationId}}({{#allParams}}{{paramName}}{{^-last}}, {{/-last}}{{/allParams}});
+        // {{#returnType}}{{#customResponseWrapper}}{{{.}}}<{{/customResponseWrapper}}{{returnType}}{{#customResponseWrapper}}>{{/customResponseWrapper}} response = {{/returnType}}api.{{operationId}}({{#allParams}}{{paramName}}{{^-last}}, {{/-last}}{{/allParams}});
 
         // TODO: test validations
     }
@@ -63,7 +63,7 @@ class {{classname}}Test {
           {{#queryParams}}
             .{{paramName}}(null){{#-last}};{{/-last}}
           {{/queryParams}}
-        // {{#returnType}}{{{.}}} response = {{/returnType}}api.{{operationId}}({{#allParams}}{{^isQueryParam}}{{paramName}}, {{/isQueryParam}}{{/allParams}}queryParams);
+        // {{#returnType}}{{#customResponseWrapper}}{{{.}}}<{{/customResponseWrapper}}{{returnType}}{{#customResponseWrapper}}>{{/customResponseWrapper}} response = {{/returnType}}api.{{operationId}}({{#allParams}}{{^isQueryParam}}{{paramName}}, {{/isQueryParam}}{{/allParams}}queryParams);
 
     // TODO: test validations
     }
