--- a/modules/openapi-generator/src/main/resources/Java/libraries/jersey2/api.mustache
+++ b/modules/openapi-generator/src/main/resources/Java/libraries/jersey2/api.mustache
@@ -81,7 +81,7 @@ public class {{classname}} {
   {{#isDeprecated}}
   @Deprecated
   {{/isDeprecated}}
-  public {{#returnType}}{{{.}}} {{/returnType}}{{^returnType}}void {{/returnType}}{{operationId}}({{#allParams}}{{{dataType}}} {{paramName}}{{^-last}}, {{/-last}}{{/allParams}}) throws ApiException {
+  public {{#returnType}}{{#customResponseWrapper}}{{{.}}}<{{/customResponseWrapper}}{{{returnType}}}{{#customResponseWrapper}}>{{/customResponseWrapper}} {{/returnType}}{{^returnType}}void {{/returnType}}{{operationId}}({{#allParams}}{{{dataType}}} {{paramName}}{{^-last}}, {{/-last}}{{/allParams}}) throws ApiException {
     {{#returnType}}return {{/returnType}}{{operationId}}WithHttpInfo({{#allParams}}{{paramName}}{{^-last}}, {{/-last}}{{/allParams}}){{#returnType}}.getData(){{/returnType}};
   }
   {{/vendorExtensions.x-group-parameters}}
@@ -93,7 +93,7 @@ public class {{classname}} {
    {{#allParams}}
    * @param {{paramName}} {{description}}{{#required}} (required){{/required}}{{^required}} (optional{{#defaultValue}}, default to {{.}}{{/defaultValue}}){{/required}}
    {{/allParams}}
-   * @return ApiResponse&lt;{{returnType}}{{^returnType}}Void{{/returnType}}&gt;
+   * @return ApiResponse&lt;{{#returnType}}{{#customResponseWrapper}}{{{.}}}<{{/customResponseWrapper}}{{returnType}}{{#customResponseWrapper}}>{{/customResponseWrapper}}{{/returnType}}{{^returnType}}Void{{/returnType}}&gt;
    * @throws ApiException if fails to make API call
    {{#responses.0}}
    * @http.response.details
@@ -115,7 +115,7 @@ public class {{classname}} {
   {{#isDeprecated}}
   @Deprecated
   {{/isDeprecated}}
-  public{{/vendorExtensions.x-group-parameters}}{{#vendorExtensions.x-group-parameters}}private{{/vendorExtensions.x-group-parameters}} ApiResponse<{{{returnType}}}{{^returnType}}Void{{/returnType}}> {{operationId}}WithHttpInfo({{#allParams}}{{{dataType}}} {{paramName}}{{^-last}}, {{/-last}}{{/allParams}}) throws ApiException {
+  public{{/vendorExtensions.x-group-parameters}}{{#vendorExtensions.x-group-parameters}}private{{/vendorExtensions.x-group-parameters}} ApiResponse<{{#returnType}}{{#customResponseWrapper}}{{{.}}}<{{/customResponseWrapper}}{{{returnType}}}{{#customResponseWrapper}}>{{/customResponseWrapper}}{{/returnType}}{{^returnType}}Void{{/returnType}}> {{operationId}}WithHttpInfo({{#allParams}}{{{dataType}}} {{paramName}}{{^-last}}, {{/-last}}{{/allParams}}) throws ApiException {
     Object localVarPostBody = {{#bodyParam}}{{paramName}}{{/bodyParam}}{{^bodyParam}}null{{/bodyParam}};
     {{#allParams}}{{#required}}
     // verify the required parameter '{{paramName}}' is set
@@ -162,7 +162,7 @@ public class {{classname}} {
     String[] localVarAuthNames = new String[] { {{#authMethods}}"{{name}}"{{^-last}}, {{/-last}}{{/authMethods}} };
 
     {{#returnType}}
-    GenericType<{{{returnType}}}> localVarReturnType = new GenericType<{{{returnType}}}>() {};
+    GenericType<{{#customResponseWrapper}}{{{.}}}<{{/customResponseWrapper}}{{{returnType}}}{{#customResponseWrapper}}>{{/customResponseWrapper}}> localVarReturnType = new GenericType<{{#customResponseWrapper}}{{{.}}}<{{/customResponseWrapper}}{{{returnType}}}{{#customResponseWrapper}}>{{/customResponseWrapper}}>() {};
 
     {{/returnType}}
     return apiClient.invokeAPI("{{classname}}.{{operationId}}", localVarPath, "{{httpMethod}}", localVarQueryParams, localVarPostBody,
@@ -198,7 +198,7 @@ public class {{classname}} {
 
     /**
      * Execute {{operationId}} request
-     {{#returnType}}* @return {{.}}{{/returnType}}
+     {{#returnType}}* @return {{#customResponseWrapper}}{{{.}}}<{{/customResponseWrapper}}{{{returnType}}}{{#customResponseWrapper}}>{{/customResponseWrapper}}{{/returnType}}
      * @throws ApiException if fails to make API call
      {{#responses.0}}
      * @http.response.details
@@ -212,7 +212,7 @@ public class {{classname}} {
      {{#isDeprecated}}* @deprecated{{/isDeprecated}}
      */
     {{#isDeprecated}}@Deprecated{{/isDeprecated}}
-    public {{{returnType}}}{{^returnType}}void{{/returnType}} execute() throws ApiException {
+    public {{#customResponseWrapper}}{{{.}}}<{{/customResponseWrapper}}{{{returnType}}}{{#customResponseWrapper}}>{{/customResponseWrapper}}{{^returnType}}void{{/returnType}} execute() throws ApiException {
       {{#returnType}}return {{/returnType}}this.executeWithHttpInfo().getData();
     }
 
@@ -235,7 +235,7 @@ public class {{classname}} {
     {{#isDeprecated}}
     @Deprecated
     {{/isDeprecated}}
-    public ApiResponse<{{{returnType}}}{{^returnType}}Void{{/returnType}}> executeWithHttpInfo() throws ApiException {
+    public ApiResponse<{{#customResponseWrapper}}{{{.}}}<{{/customResponseWrapper}}{{{returnType}}}{{#customResponseWrapper}}>{{/customResponseWrapper}}{{^returnType}}Void{{/returnType}}> executeWithHttpInfo() throws ApiException {
       return {{operationId}}WithHttpInfo({{#allParams}}{{paramName}}{{^-last}}, {{/-last}}{{/allParams}});
     }
   }
