--- a/modules/openapi-generator/src/main/resources/Java/libraries/jersey2/api_test.mustache
+++ b/modules/openapi-generator/src/main/resources/Java/libraries/jersey2/api_test.mustache
@@ -44,10 +44,10 @@ public class {{classname}}Test {
         //{{{dataType}}} {{paramName}} = null;
         {{/allParams}}
         {{^vendorExtensions.x-group-parameters}}
-        //{{#returnType}}{{{.}}} response = {{/returnType}}api.{{operationId}}({{#allParams}}{{paramName}}{{^-last}}, {{/-last}}{{/allParams}});
+        //{{#returnType}}{{#customResponseWrapper}}{{{.}}}<{{/customResponseWrapper}}{{{returnType}}}{{#customResponseWrapper}}>{{/customResponseWrapper}} response = {{/returnType}}api.{{operationId}}({{#allParams}}{{paramName}}{{^-last}}, {{/-last}}{{/allParams}});
         {{/vendorExtensions.x-group-parameters}}
         {{#vendorExtensions.x-group-parameters}}
-        //{{#returnType}}{{{.}}} response = {{/returnType}}api.{{operationId}}({{#pathParams}}{{paramName}}{{^-last}}, {{/-last}}{{/pathParams}}){{#allParams}}{{^isPathParam}}
+        //{{#returnType}}{{#customResponseWrapper}}{{{.}}}<{{/customResponseWrapper}}{{{returnType}}}{{#customResponseWrapper}}>{{/customResponseWrapper}} response = {{/returnType}}api.{{operationId}}({{#pathParams}}{{paramName}}{{^-last}}, {{/-last}}{{/pathParams}}){{#allParams}}{{^isPathParam}}
         //        .{{paramName}}({{paramName}}){{/isPathParam}}{{/allParams}}
         //        .execute();
         {{/vendorExtensions.x-group-parameters}}
