--- a/modules/openapi-generator/src/main/resources/JavaSpring/returnTypes.mustache
+++ b/modules/openapi-generator/src/main/resources/JavaSpring/returnTypes.mustache
@@ -1,1 +1,1 @@
-{{#isMap}}Map<String, {{{returnType}}}>{{/isMap}}{{#isArray}}{{#reactive}}Flux{{/reactive}}{{^reactive}}{{{returnContainer}}}{{/reactive}}<{{{returnType}}}>{{/isArray}}{{^returnContainer}}{{{returnType}}}{{/returnContainer}}
+{{#customResponseWrapper}}{{{.}}}<{{/customResponseWrapper}}{{#isMap}}Map<String, {{{returnType}}}>{{/isMap}}{{#isArray}}{{#reactive}}Flux{{/reactive}}{{^reactive}}{{{returnContainer}}}{{/reactive}}<{{{returnType}}}>{{/isArray}}{{^returnContainer}}{{{returnType}}}{{/returnContainer}}{{#customResponseWrapper}}>{{/customResponseWrapper}}
