Skip serialization when field is readOnly

--- a/modules/openapi-generator/src/main/resources/go/model_simple.mustache
+++ b/modules/openapi-generator/src/main/resources/go/model_simple.mustache
@@ -295,9 +295,14 @@ func (o {{classname}}) MarshalJSON() ([]byte, error) {
 	{{/isNullable}}
 	{{! if argument is not nullable, don't set it if it is nil}}
 	{{^isNullable}}
+	{{^isReadOnly}}
 	if {{#required}}true{{/required}}{{^required}}!isNil(o.{{name}}){{/required}} {
 		toSerialize["{{baseName}}"] = o.{{name}}
 	}
+	{{/isReadOnly}}
+	{{#isReadOnly}}
+    // skip: {{baseName}} is readOnly
+	{{/isReadOnly}}
 	{{/isNullable}}
 	{{/vars}}
 	{{#isAdditionalPropertiesTrue}}
