--- a/modules/openapi-generator/src/main/resources/go/client.mustache
+++ b/modules/openapi-generator/src/main/resources/go/client.mustache
@@ -34,6 +34,8 @@ import (
 var (
 	jsonCheck = regexp.MustCompile(`(?i:(?:application|text)/(?:vnd\.[^;]+\+)?json)`)
 	xmlCheck  = regexp.MustCompile(`(?i:(?:application|text)/xml)`)
+    queryParamSplit = regexp.MustCompile(`(^|&)([^&]+)`)
+    queryDescape    = strings.NewReplacer( "%5B", "[", "%5D", "]" )
 )
 
 // APIClient manages communication with the {{appName}} API v{{version}}
@@ -147,101 +149,144 @@ func parameterValueToString( obj interface{}, key string ) string {
     return fmt.Sprintf("%v", dataMap[key])
 }
 
+
 func parameterAddToHolder(queryParams interface{}, keyPrefix string, obj interface{}) {
-	switch valuesMap := queryParams.(type) {
-	case url.Values:
-		valuesMap.Add( keyPrefix, fmt.Sprintf("%v", obj) )
-		break
-	case map[string]string:
-		valuesMap[keyPrefix] = fmt.Sprintf("%v", obj)
-		break
-	}
+    var v = reflect.ValueOf(obj)
+    var value = ""
+    if v == reflect.ValueOf(nil) {
+        value = "nil"
+    } else {
+        switch v.Kind() {
+			case reflect.Invalid:
+				value = "invalid"
+
+			case reflect.Struct:
+				var param,ok = obj.(MappedNullable)
+				if ok {
+					dataMap,err := param.ToMap()
+					if err != nil {
+						return
+					}
+					parameterAddDataToQuery( queryParams, keyPrefix, dataMap )
+					return
+				}
+				value = v.Type().String() + " value"
+			case reflect.Interface:
+				fallthrough
+            case reflect.Ptr:
+                parameterAddToHolder(queryParams, keyPrefix, v.Elem().Interface())
+                return
+
+            case reflect.Int, reflect.Int8, reflect.Int16,
+                reflect.Int32, reflect.Int64:
+                value = strconv.FormatInt(v.Int(), 10)
+            case reflect.Uint, reflect.Uint8, reflect.Uint16,
+                reflect.Uint32, reflect.Uint64, reflect.Uintptr:
+                value = strconv.FormatUint(v.Uint(), 10)
+            case reflect.Float32, reflect.Float64:
+                value = strconv.FormatFloat(v.Float(), 'g', -1, 32)
+            case reflect.Bool:
+                value = strconv.FormatBool(v.Bool())
+            case reflect.String:
+                value = v.String()
+            default:
+                value = v.Type().String() + " value"
+        }
+    }
+
+    switch valuesMap := queryParams.(type) {
+        case url.Values:
+            valuesMap.Add( keyPrefix, value )
+            break
+        case map[string]string:
+            valuesMap[keyPrefix] = value
+            break
+    }
 }
 
 // parameterAddToQuery adds the provided object to the url query supporting deep object specification
 // the del delimiter is used to the split the value as list
 func parameterAddToQuery(queryParams interface{}, keyPrefix string, obj interface{}, collectionFormat string) {
-	if reflect.TypeOf(obj).Kind() == reflect.Slice {
-		var indValue = reflect.ValueOf(obj)
-		if indValue == reflect.ValueOf(nil) {
-			return
-		}
-		var lenIndValue = indValue.Len()
-		for i:=0;i<lenIndValue;i++ {
-			var arrayValue = indValue.Index(i)
-			parameterAddDataToQuery(queryParams, keyPrefix, arrayValue.Interface())
-		}
-		return
+    if reflect.TypeOf(obj).Kind() == reflect.Slice {
+        var indValue = reflect.ValueOf(obj)
+        if indValue == reflect.ValueOf(nil) {
+            return
+        }
+        var lenIndValue = indValue.Len()
+        for i:=0;i<lenIndValue;i++ {
+            var arrayValue = indValue.Index(i)
+            parameterAddDataToQuery(queryParams, keyPrefix, arrayValue.Interface())
+        }
+        return
 
-	} else if reflect.TypeOf(obj).Kind() == reflect.Ptr {
-		var param,ok = obj.(MappedNullable)
-		if ok {
-			dataMap,err := param.ToMap()
-			if err != nil {
-				return
-			}
-			parameterAddDataToQuery( queryParams, keyPrefix, dataMap )
-			return
-		}
-		// scenario of pointer-to-slice
-		var pointed = reflect.ValueOf(obj).Elem()
-		var pointedValue = pointed.Interface()
-		parameterAddToQuery(queryParams, keyPrefix, pointedValue, collectionFormat)
-		return
+    } else if reflect.TypeOf(obj).Kind() == reflect.Ptr {
+        var param,ok = obj.(MappedNullable)
+        if ok {
+            dataMap,err := param.ToMap()
+            if err != nil {
+                return
+            }
+            parameterAddDataToQuery( queryParams, keyPrefix, dataMap )
+            return
+        }
+        // scenario of pointer indirect value
+        var pointed = reflect.ValueOf(obj).Elem()
+        var pointedValue = pointed.Interface()
+        parameterAddToQuery(queryParams, keyPrefix, pointedValue, collectionFormat)
+        return
 
-	} else if t, ok := obj.(time.Time); ok {
-		parameterAddToHolder(queryParams, keyPrefix, t.Format(time.RFC3339))
-		return
-	}
+    } else if t, ok := obj.(time.Time); ok {
+        parameterAddToHolder(queryParams, keyPrefix, t.Format(time.RFC3339))
+        return
+    }
 
-	// other value
-	parameterAddToHolder(queryParams, keyPrefix, obj)
+    // other value
+    parameterAddToHolder(queryParams, keyPrefix, obj)
 }
 
 // parameterAddMapToQuery adds the provided map to the url parameters list supporting deep object specification
 func parameterAddDataToQuery(queryParams interface{}, keyPrefix string, param interface{}) {
-	if param == nil {
-		return
-	}
-	var kind = reflect.TypeOf(param).Kind()
-	if kind == reflect.Slice {
-		var indValue = reflect.ValueOf(param)
-		if indValue == reflect.ValueOf(nil) {
-			return
-		}
-		var lenIndValue = indValue.Len()
-		for i:=0;i<lenIndValue;i++ {
-			var arrayValue = indValue.Index(i)
-			parameterAddDataToQuery(queryParams, fmt.Sprintf("%s[%d]", keyPrefix, i), arrayValue.Interface())
-		}
-		return
+    if param == nil {
+        return
+    }
+    var kind = reflect.TypeOf(param).Kind()
+    if kind == reflect.Slice {
+        var indValue = reflect.ValueOf(param)
+        if indValue == reflect.ValueOf(nil) {
+            return
+        }
+        var lenIndValue = indValue.Len()
+        for i:=0;i<lenIndValue;i++ {
+            var arrayValue = indValue.Index(i)
+            parameterAddDataToQuery(queryParams, fmt.Sprintf("%s[%d]", keyPrefix, i), arrayValue.Interface())
+        }
+        return
 
-	} else if kind == reflect.Map {
-		var indValue = reflect.ValueOf(param)
-		if indValue == reflect.ValueOf(nil) {
-			return
-		}
-		
-		iter := indValue.MapRange()
-		for iter.Next() {
-			k,v := iter.Key(), iter.Value()
-			parameterAddDataToQuery(queryParams, fmt.Sprintf("%s[%s]", keyPrefix, k.String()), v.Interface())
-		}
-		return
-	} else if kind == reflect.Ptr {
-		var param,ok = param.(MappedNullable)
-		if ok {
-			dataMap,err := param.ToMap()
-			if err != nil {
-				return
-			}
-			parameterAddDataToQuery( queryParams, keyPrefix, dataMap )
-			return
-		}
-	}
+    } else if kind == reflect.Map {
+        var indValue = reflect.ValueOf(param)
+        if indValue == reflect.ValueOf(nil) {
+            return
+        }
+        iter := indValue.MapRange()
+        for iter.Next() {
+            k,v := iter.Key(), iter.Value()
+            parameterAddDataToQuery(queryParams, fmt.Sprintf("%s[%s]", keyPrefix, k.String()), v.Interface())
+        }
+        return
+    } else if kind == reflect.Ptr {
+        var paramNullable,ok = param.(MappedNullable)
+        if ok {
+            dataMap,err := paramNullable.ToMap()
+            if err != nil {
+                return
+            }
+            parameterAddDataToQuery( queryParams, keyPrefix, dataMap )
+            return
+        }
+    }
 
-	// primitive value
-	parameterAddToHolder(queryParams, keyPrefix, param)
+    // primitive value
+    parameterAddToHolder(queryParams, keyPrefix, param)
 }
 
 // helper for converting interface{} parameters to json strings
@@ -393,7 +438,11 @@ func (c *APIClient) prepareRequest(
 	}
 
 	// Encode the parameters.
-	url.RawQuery = query.Encode()
+    url.RawQuery = queryParamSplit.ReplaceAllStringFunc(query.Encode(), func(s string) string {
+        pieces := strings.Split(s, "=")
+        pieces[0] = queryDescape.Replace(pieces[0])
+        return strings.Join(pieces, "=")
+    })
 
 	// Generate a new request
 	if body != nil {
