Remove ConfigureAwait(false)

--- a/modules/openapi-generator/src/main/resources/csharp-netcore/libraries/unity/ApiClient.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-netcore/libraries/unity/ApiClient.mustache
@@ -412,7 +412,7 @@ namespace {{packageName}}.Client
 
                 try
                 {
-                    await Task.WhenAny(tsc.Task, Task.Delay(Timeout.Infinite, finalToken)).ConfigureAwait(false);
+                    await Task.WhenAny(tsc.Task, Task.Delay(Timeout.Infinite, finalToken));
                 }
                 catch (OperationCanceledException)
                 {
