Clash of variable name when the body is just a string
If a body is just treated as a string, you would get a body clash name on `body`

ie
```java
RequestParameter body = requestParameters.body();
String body = body != null ? DatabindCodec.mapper().convertValue(requestBody.get(), new TypeReference<String>(){}) : null;
```

with this change:
```java
RequestParameter requestBody = requestParameters.body();
String body = requestBody != null ? DatabindCodec.mapper().convertValue(requestBody.get(), new TypeReference<String>(){}) : null;
```

--- a/modules/openapi-generator/src/main/resources/JavaVertXWebServer/bodyParams.mustache
+++ b/modules/openapi-generator/src/main/resources/JavaVertXWebServer/bodyParams.mustache
@@ -1,4 +1,4 @@
 {{#isBodyParam}}
-        RequestParameter body = requestParameters.body();
-        {{{dataType}}} {{paramName}} = body != null ? DatabindCodec.mapper().convertValue(body.get(), new TypeReference<{{{dataType}}}>(){}) : null;
+  RequestParameter requestBody = requestParameters.body();
+  {{{dataType}}} {{paramName}} = requestBody != null ? DatabindCodec.mapper().convertValue(requestBody.get(), new TypeReference<{{{dataType}}}>(){}) : null;
 {{/isBodyParam}}
