Clash of variable names when the body is just a string
If a `body` is just treated as a string, you would get a body clash name on `body` and `requestBody`

ie
```java
RequestParameter body = requestParameters.body();
String body = body != null ? DatabindCodec.mapper().convertValue(body.get(), new TypeReference<String>(){}) : null;
```
with this change:
```java
RequestParameter requestParameterBody = requestParameters.body();
String body = requestParameterBody != null ? DatabindCodec.mapper().convertValue(requestParameterBody.get(), new TypeReference<String>(){}) : 
```

--- a/modules/openapi-generator/src/main/resources/JavaVertXWebServer/bodyParams.mustache
+++ b/modules/openapi-generator/src/main/resources/JavaVertXWebServer/bodyParams.mustache
@@ -1,4 +1,5 @@
 {{#isBodyParam}}
-        RequestParameter body = requestParameters.body();
-        {{{dataType}}} {{paramName}} = body != null ? DatabindCodec.mapper().convertValue(body.get(), new TypeReference<{{{dataType}}}>(){}) : null;
+  {{! Don't use body or requestBody as name, to avoid a name clash with the paramName }}
+  RequestParameter requestParameterBody = requestParameters.body();
+  {{{dataType}}} {{paramName}} = requestParameterBody != null ? DatabindCodec.mapper().convertValue(requestParameterBody.get(), new TypeReference<{{{dataType}}}>(){}) : null;
 {{/isBodyParam}}
