--- a/modules/openapi-generator/src/main/resources/swift5/libraries/alamofire/AlamofireImplementations.mustache
+++ b/modules/openapi-generator/src/main/resources/swift5/libraries/alamofire/AlamofireImplementations.mustache
@@ -189,8 +189,8 @@ private var managerStore = SynchronizedDictionary<String, Alamofire.Session>()
                 cleanupRequest()
 
                 switch dataResponse.result {
-                case .success:
-                    completion(.success(Response(response: dataResponse.response!, body: dataResponse.data as! T)))
+                case .success(let data):
+                    completion(.success(Response(response: dataResponse.response!, body: data as! T)))
                 case let .failure(error):
                     completion(.failure(ErrorResponse.error(dataResponse.response?.statusCode ?? 500, dataResponse.data, dataResponse.response, error)))
                 }
@@ -359,8 +359,8 @@ private var managerStore = SynchronizedDictionary<String, Alamofire.Session>()
                 cleanupRequest()
 
                 switch dataResponse.result {
-                case .success:
-                    completion(.success(Response(response: dataResponse.response!, body: dataResponse.data as! T)))
+                case .success(let data):
+                    completion(.success(Response(response: dataResponse.response!, body: data as! T)))
                 case let .failure(error):
                     completion(.failure(ErrorResponse.error(dataResponse.response?.statusCode ?? 500, dataResponse.data, dataResponse.response, error)))
                 }
