--- a/modules/openapi-generator/src/main/resources/python-nextgen/api_client.mustache
+++ b/modules/openapi-generator/src/main/resources/python-nextgen/api_client.mustache
@@ -320,8 +320,8 @@ class ApiClient(object):
             return None
 
         if type(klass) == str:
-            if klass.startswith('list['):
-                sub_kls = re.match(r'list\[(.*)]', klass).group(1)
+            if klass.startswith('List['):
+                sub_kls = re.match(r'List\[(.*)]', klass).group(1)
                 return [self.__deserialize(sub_data, sub_kls)
                         for sub_data in data]
 
