--- a/modules/openapi-generator/src/main/resources/python-nextgen/python_doc_auth_partial.mustache
+++ b/modules/openapi-generator/src/main/resources/python-nextgen/python_doc_auth_partial.mustache
@@ -15,15 +15,15 @@ configuration = {{{packageName}}}.Configuration(
 
 # Configure HTTP basic authorization: {{{name}}}
 configuration = {{{packageName}}}.Configuration(
-    username = 'YOUR_USERNAME',
-    password = 'YOUR_PASSWORD'
+    username = os.environ["USERNAME"],
+    password = os.environ["PASSWORD"]
 )
 {{/isBasicBasic}}
 {{#isBasicBearer}}
 
 # Configure Bearer authorization{{#bearerFormat}} ({{{.}}}){{/bearerFormat}}: {{{name}}}
 configuration = {{{packageName}}}.Configuration(
-    access_token = 'YOUR_BEARER_TOKEN'
+    access_token = os.environ["BEARER_TOKEN"]
 )
 {{/isBasicBearer}}
 {{#isHttpSignature}}
@@ -92,18 +92,14 @@ configuration = {{{packageName}}}.Configuration(
 {{#isApiKey}}
 
 # Configure API key authorization: {{{name}}}
-configuration.api_key['{{{name}}}'] = 'YOUR_API_KEY'
+configuration.api_key['{{{name}}}'] = os.environ["API_KEY"]
 
 # Uncomment below to setup prefix (e.g. Bearer) for API key, if needed
 # configuration.api_key_prefix['{{name}}'] = 'Bearer'
 {{/isApiKey}}
 {{#isOAuth}}
 
-# Configure OAuth2 access token for authorization: {{{name}}}
-configuration = {{{packageName}}}.Configuration(
-    host = "{{{basePath}}}"
-)
-configuration.access_token = 'YOUR_ACCESS_TOKEN'
+configuration.access_token = os.environ["ACCESS_TOKEN"]
 {{/isOAuth}}
 {{/authMethods}}
 {{/hasAuthMethods}}
