--- a/modules/openapi-generator/src/main/resources/go/utils.mustache
+++ b/modules/openapi-generator/src/main/resources/go/utils.mustache
@@ -3,6 +3,7 @@ package {{packageName}}
 
 import (
 	"encoding/json"
+    "reflect"
 	"time"
 )
 
@@ -330,6 +331,7 @@ func isNil(i interface{}) bool {
         return reflect.ValueOf(i).IsZero()
     }
     return false
-}type MappedNullable interface {
+}
+type MappedNullable interface {
 	ToMap() (map[string]interface{}, error)
 }
