--- a/modules/openapi-generator/src/main/resources/swift-alt/modelOneOf.mustache
+++ b/modules/openapi-generator/src/main/resources/swift-alt/modelOneOf.mustache
@@ -1,3 +1,6 @@
+{{#isDeprecated}}
+@available(*, deprecated, message: "Deprecated API parameter")
+{{/isDeprecated}}
 public enum {{classname}}: Codable {
     {{#oneOf}}
     case type{{.}}({{.}})
