--- a/modules/openapi-generator/src/main/resources/swift-alt/modelObject.mustache
+++ b/modules/openapi-generator/src/main/resources/swift-alt/modelObject.mustache
@@ -1,3 +1,6 @@
+{{#isDeprecated}}
+@available(*, deprecated, message: "Deprecated API parameter")
+{{/isDeprecated}}
 public struct {{{classname}}}: Codable {
 {{#allVars}}
 {{#isEnum}}
