add enum validator

--- a/modules/openapi-generator/src/main/resources/python-nextgen/model_generic.mustache
+++ b/modules/openapi-generator/src/main/resources/python-nextgen/model_generic.mustache
@@ -31,6 +31,13 @@ class {{classname}}({{#parent}}{{{.}}}{{/parent}}{{^parent}}BaseModel{{/parent}}
             raise ValueError("must validate the regular expression {{{pattern}}}")
         return v
     {{/vendorExtensions.x-regex}}
+    {{#isEnum}}
+    @validator('{{{name}}}')
+    def {{{name}}}_validate_enum(cls, v):
+        if v not in ({{#allowableValues}}{{#enumVars}}{{{value}}}{{^-last}}, {{/-last}}{{/enumVars}}{{/allowableValues}}):
+            raise ValueError("must validate the enum values ({{#allowableValues}}{{#enumVars}}{{{value}}}{{^-last}}, {{/-last}}{{/enumVars}}{{/allowableValues}})")
+        return v
+    {{/isEnum}}
 {{/vars}}
 
     class Config:
