--- a/modules/openapi-generator/src/main/resources/csharp-netcore/libraries/generichost/IApi.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-netcore/libraries/generichost/IApi.mustache
@@ -1,6 +1,6 @@
 using System.Net.Http;
 
-namespace {{packageName}}.{{interfacePrefix}}{{derivedApiPackage}}
+namespace {{packageName}}.{{interfacePrefix}}{{apiPackage}}
 {
     /// <summary>
     /// Any Api client
