--- a/modules/openapi-generator/src/main/resources/csharp-netcore/libraries/generichost/ApiFactory.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-netcore/libraries/generichost/ApiFactory.mustache
@@ -14,7 +14,7 @@ namespace {{packageName}}.{{clientPackage}}
         /// </summary>
         /// <typeparam name="IResult"></typeparam>
         /// <returns></returns>
-        IResult Create<IResult>() where IResult : {{interfacePrefix}}{{derivedApiPackage}}.IApi;
+        IResult Create<IResult>() where IResult : {{interfacePrefix}}{{apiPackage}}.IApi;
     }
 
     /// <summary>
@@ -41,7 +41,7 @@ namespace {{packageName}}.{{clientPackage}}
         /// </summary>
         /// <typeparam name="IResult"></typeparam>
         /// <returns></returns>
-        public IResult Create<IResult>() where IResult : {{interfacePrefix}}{{derivedApiPackage}}.IApi
+        public IResult Create<IResult>() where IResult : {{interfacePrefix}}{{apiPackage}}.IApi
         {
             return Services.GetRequiredService<IResult>();
         }
