--- a/modules/openapi-generator/src/main/resources/csharp-netcore/libraries/generichost/ApiTestsBase.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-netcore/libraries/generichost/ApiTestsBase.mustache
@@ -11,7 +11,7 @@ using {{packageName}}.Extensions;
 {{>testInstructions}}
 
 
-namespace {{packageName}}.Test.{{derivedApiPackage}}
+namespace {{packageName}}.Test.{{apiPackage}}
 {
     /// <summary>
     ///  Base class for API tests
