--- a/modules/openapi-generator/src/main/resources/csharp-netcore/libraries/generichost/api_test.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-netcore/libraries/generichost/api_test.mustache
@@ -4,25 +4,25 @@ using System.Collections.Generic;
 using System.Threading.Tasks;
 using Xunit;
 using Microsoft.Extensions.DependencyInjection;
-using {{packageName}}.{{interfacePrefix}}{{derivedApiPackage}};{{#hasImport}}
+using {{packageName}}.{{interfacePrefix}}{{apiPackage}};{{#hasImport}}
 using {{packageName}}.{{modelPackage}};{{/hasImport}}
 
 
 {{>testInstructions}}
 
 
-namespace {{packageName}}.Test.{{derivedApiPackage}}
+namespace {{packageName}}.Test.{{apiPackage}}
 {
     /// <summary>
     ///  Class for testing {{classname}}
     /// </summary>
     public sealed class {{classname}}Tests : ApiTestsBase
     {
-        private readonly {{interfacePrefix}}{{derivedApiPackage}}.{{interfacePrefix}}{{classname}} _instance;
+        private readonly {{interfacePrefix}}{{apiPackage}}.{{interfacePrefix}}{{classname}} _instance;
 
         public {{classname}}Tests(): base(Array.Empty<string>())
         {
-            _instance = _host.Services.GetRequiredService<{{interfacePrefix}}{{derivedApiPackage}}.{{interfacePrefix}}{{classname}}>();
+            _instance = _host.Services.GetRequiredService<{{interfacePrefix}}{{apiPackage}}.{{interfacePrefix}}{{classname}}>();
         }
 
         {{#operations}}
