Fix integration tests

--- a/modules/openapi-generator/src/main/resources/Java/libraries/okhttp-gson/oneof_model.mustache
+++ b/modules/openapi-generator/src/main/resources/Java/libraries/okhttp-gson/oneof_model.mustache
@@ -220,9 +220,11 @@ public class {{classname}} extends AbstractOpenApiSchema{{#vendorExtensions.x-im
 
     {{/oneOf}}
     static {
+        {{#composedSchemas}}
         {{#oneOf}}
-        schemas.put("{{{.}}}", {{{.}}}.class);
+        schemas.put("{{{dataType}}}", {{{baseType}}}.class);
         {{/oneOf}}
+        {{/composedSchemas}}
     }
 
     @Override
