Missed dereference for required files

--- a/modules/openapi-generator/src/main/resources/go/api.mustache
+++ b/modules/openapi-generator/src/main/resources/go/api.mustache
@@ -259,7 +259,7 @@ func (a *{{{classname}}}Service) {{nickname}}Execute(r {{#structPrefix}}{{&class
 	{{paramName}}LocalVarFormFileName = "{{baseName}}"
 
 {{#required}}
-	{{paramName}}LocalVarFile := *r.{{paramName}}
+	{{paramName}}LocalVarFile := r.{{paramName}}
 {{/required}}
 {{^required}}
 	var {{paramName}}LocalVarFile *{{dataType}}
