add readonly support

--- a/modules/openapi-generator/src/main/resources/python-nextgen/model_generic.mustache
+++ b/modules/openapi-generator/src/main/resources/python-nextgen/model_generic.mustache
@@ -78,7 +78,7 @@ class {{classname}}({{#parent}}{{{.}}}{{/parent}}{{^parent}}BaseModel{{/parent}}
 {{/discriminator}}
     def to_str(self) -> str:
         """Returns the string representation of the model using alias"""
-        return pprint.pformat(self.to_dict())
+        return pprint.pformat(self.dict(by_alias=True))
 
     def to_json(self) -> str:
         """Returns the JSON representation of the model using alias"""
@@ -92,9 +92,14 @@ class {{classname}}({{#parent}}{{{.}}}{{/parent}}{{^parent}}BaseModel{{/parent}}
     def to_dict(self):
         """Returns the dictionary representation of the model using alias"""
         _dict = self.dict(by_alias=True,
-                          {{#isAdditionalPropertiesTrue}}
-                          exclude={"additional_properties"},
-                          {{/isAdditionalPropertiesTrue}}
+                          exclude={
+                            {{#vendorExtensions.x-py-readonly}}
+                            "{{{.}}}",
+                            {{/vendorExtensions.x-py-readonly}}
+                            {{#isAdditionalPropertiesTrue}}
+                            "additional_properties"
+                            {{/isAdditionalPropertiesTrue}}
+                          },
                           exclude_none=True)
         {{#allVars}}
         {{#isContainer}}
