swift-alt v0.19.0 Support for raw value in header

--- a/modules/openapi-generator/src/main/resources/swift-alt/api.mustache
+++ b/modules/openapi-generator/src/main/resources/swift-alt/api.mustache
@@ -121,7 +121,7 @@ open class {{classname}} {
                 {{/-last}}
                 {{/headerParams}}
                 {{#headerParams}}
-                    "{{baseName}}": {{paramName}}{{^-last}}, {{/-last}}
+                    "{{baseName}}": {{> toString}}{{^-last}}, {{/-last}}
                 {{/headerParams}}
                 {{#headerParams}}
                 {{#-last}}
